# verso

./: README.md  shell.nix  verso.cabal
src/: Verso.hs
